# localstack-extension-platform-observability

./: MANUAL.md  Makefile  README.md  pyproject.toml  setup.cfg
platform_metrics_logger/: __init__.py  endpoint.py  extension.py  instruments.py
platform_metrics_logger/instruments/: __init__.py  aggregate.py  api.py  core.py  lambda_.py  sns.py  sqs.py
platform_observability/: __init__.py  endpoint.py  extension.py
platform_observability/instruments/: __init__.py  aggregate.py  sns.py  sqs.py
platform_observability/tracing/: lambda_.py  lambda_sqs.py  logging.py
scripts/: stream_metrics.sh  summarize_lambda_event_log.py
