[metadata]
name = localstack-extension-platform-metrics-logger
version = 0.1.0
summary = LocalStack Extension: LocalStack Extension: Platform metric logger
url = https://github.com/localstack/localstack-extension-platform-metrics-logger
author = LocalStack Contributors
author_email = info@localstack.cloud
description = LocalStack extension for logging platform metrics
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
zip_safe = False
packages = find:
install_requires =
    localstack>=3.0.3.dev

[options.entry_points]
localstack.extensions =
    localstack-extension-platform-metrics-logger = platform_metrics_logger.extension:MyExtension
