[metadata]
name = localstack-extension-platform-observability
version = 0.0.1
summary = LocalStack Extension: LocalStack Extension: Platform observability
url = https://github.com/localstack/localstack-extension-platform-observability
author = LocalStack Contributors
author_email = info@localstack.cloud
description = LocalStack extension for making platform metrics and traces accessible through logs and endpoints
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
zip_safe = False
packages = find:
install_requires =
    localstack>=3.0.3.dev
    werkzeug

[options.entry_points]
localstack.extensions =
    localstack-extension-platform-observability = platform_observability.extension:ObservabilityExtension
